force-app/main/default/objects/HDT_Dependant_Picklist_VAS__mdt/HDT_Dependant_Picklist_VAS__mdt.object-meta.xml
<CustomObject>
    <label>HDT Dependant Picklist VAS</label>
    <pluralLabel>HDT Dependant Picklists VAS</pluralLabel>
</CustomObject>