force-app/main/default/objects/HDT_Dependant_Picklist_VAS__mdt/fields/AdditionalConfiguration__c.field-meta.xml
<CustomField>
    <fullName>AdditionalConfiguration__c</fullName>
    <label>Additional Configuration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MODIFICA_DATI_CONSUMI</fullName>
                <default>true</default>
                <label>MODIFICA_DATI_CONSUMI</label>
            </value>
            <value>
                <fullName>SELEZ_FATTURE_EC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>