force-app/main/default/objects/HDT_Dependant_Picklist_VAS__mdt/fields/HasAssetSelection__c.field-meta.xml
<CustomField>
    <fullName>HasAssetSelection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Asset Selection</label>
    <type>Checkbox</type>
</CustomField>