force-app/main/default/objects/HDT_Dependant_Picklist_VAS__mdt/fields/Reporting_Category__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Category__c</fullName>
    <label>Reporting Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>